--- a/Notebooks/5. Split2.ipynb
+++ b/Notebooks/5. Split2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "4  ['benar', 'banget', 'anak', 'aku', 'saja', 'ha...      0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,20 +225,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Menetapkan nilai SEED untuk memastikan pembagian data konsisten di setiap eksekusi\n",
     "SEED = 42\n",
     "\n",
-    "# Memisahkan dataset menjadi data latih dan gabungan data validasi dan uji dengan proporsi 75:25\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=.25, random_state=SEED, stratify=y)\n"
+    "# Memisahkan dataset menjadi data latih dan gabungan data validasi dan uji dengan proporsi 80:20\n",
+    "x_train, x_validation_and_test, y_train, y_validation_and_test = train_test_split(x, y, test_size=.2, random_state=SEED, stratify=y)\n",
+    "\n",
+    "# Memisahkan gabungan data validasi dan uji menjadi data validasi dan uji dengan proporsi 50:50\n",
+    "x_validation, x_test, y_validation, y_test = train_test_split(x_validation_and_test, y_validation_and_test, test_size=.5, random_state=SEED, stratify=y_validation_and_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,6 +249,11 @@
     "train_neg = (len(x_train[y_train == -1]) / train_total) * 100\n",
     "train_neu = (len(x_train[y_train == 0]) / train_total) * 100\n",
     "train_pos = (len(x_train[y_train == 1]) / train_total) * 100\n",
+    "\n",
+    "val_total = len(x_validation)\n",
+    "val_neg = (len(x_validation[y_validation == -1]) / val_total) * 100\n",
+    "val_neu = (len(x_validation[y_validation == 0]) / val_total) * 100\n",
+    "val_pos = (len(x_validation[y_validation == 1]) / val_total) * 100\n",
     "\n",
     "test_total = len(x_test)\n",
     "test_neg = (len(x_test[y_test == -1]) / test_total) * 100\n",
@@ -255,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -264,8 +272,9 @@
      "text": [
       "Set             Total Entries   Negative        Neutral         Positive       \n",
       "-------------------------------------------------------------------------------\n",
-      "Train set       3582            33.03%            37.52%            29.45%\n",
-      "Test set        1194            33.08%            37.52%            29.40%\n"
+      "Train set       3820            33.04%            37.51%            29.45%\n",
+      "Validation set  478             33.05%            37.45%            29.50%\n",
+      "Test set        478             33.05%            37.66%            29.29%\n"
      ]
     }
    ],
@@ -276,21 +285,24 @@
     "print(header)\n",
     "print(separator)\n",
     "print(f\"{'Train set':<15} {train_total:<15} {train_neg:.2f}% {' '*10} {train_neu:.2f}% {' '*10} {train_pos:.2f}%\")\n",
+    "print(f\"{'Validation set':<15} {val_total:<15} {val_neg:.2f}% {' '*10} {val_neu:.2f}% {' '*10} {val_pos:.2f}%\")\n",
     "print(f\"{'Test set':<15} {test_total:<15} {test_neg:.2f}% {' '*10} {test_neu:.2f}% {' '*10} {test_pos:.2f}%\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Menggabungkan fitur dan label untuk setiap bagian dataset\n",
     "train_data = pd.concat([x_train, y_train], axis=1)\n",
+    "validation_data = pd.concat([x_validation, y_validation], axis=1)\n",
     "test_data = pd.concat([x_test, y_test], axis=1)\n",
     "\n",
     "# Menyimpan setiap bagian dataset ke file CSV\n",
     "train_data.to_csv('../Data/5. Split/train_data.csv', index=False)\n",
+    "validation_data.to_csv('../Data/5. Split/validation_data.csv', index=False)\n",
     "test_data.to_csv('../Data/5. Split/test_data.csv', index=False)\n"
    ]
   }
@@ -311,7 +323,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.10"
   },
   "orig_nbformat": 4
  },
