--- a/Notebooks/2. Data Preprocessing.ipynb
+++ b/Notebooks/2. Data Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "4  UgxQL8hr2QMy9Lq31yZ4AaABAg  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
        "4   video1  Benar banget anak sy aj hrs sirup minum obatny..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,13 +307,12 @@
     "# Keep only the 'video_id' and 'comment_text' columns\n",
     "df = df[['video_id', 'comment_text']]\n",
     "\n",
-    "# Display the updated DataFrame\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,19 +322,21 @@
     "    text = text.lower()\n",
     "    # remove mention YouTube\n",
     "    text = re.sub(r'@[A-Za-z0-9_]+\\s[A-Za-z0-9_]+(\\s[A-Za-z0-9_]+)?', '', text)\n",
+    "    # remove URLs\n",
+    "    text = re.sub(r'http\\S+|www\\S+|https\\S+', '', text, flags=re.MULTILINE)\n",
     "    # remove punctuation, numbers, and extra whitespace\n",
     "    text = re.sub(r'[^\\w\\s]|_', ' ', text)\n",
     "    text = re.sub(r'\\d+', '', text)\n",
     "    text = ' '.join(text.split())\n",
     "    # remove emoji and non-ASCII characters\n",
     "    text = re.sub(r'[^\\x00-\\x7F]+', ' ', text)\n",
-    "\n",
+    "    \n",
     "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +456,7 @@
        "9  cara media massa cari uang memainkan keresahan...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,36 +468,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Filtering (Stopword)\n",
     "def stopword_removal(text):\n",
+    "    # Membuat StopWordRemoverFactory dari pustaka Sastrawi\n",
     "    factory = StopWordRemoverFactory()\n",
-    "    stopword = factory.create_stop_word_remover()\n",
-    "    return stopword.remove(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    # Membuat objek stopword remover\n",
+    "    stopword = factory.create_stop_word_remover()  \n",
+    "    # Menghapus kata-kata tidak penting dari teks dan mengembalikan teks yang telah difilter\n",
+    "    return stopword.remove(text)\n",
+    "\n",
     "# Stemming\n",
     "def stemming(text):\n",
-    "    # membuat objek stemmer\n",
+    "    # Membuat StemmerFactory dari pustaka Sastrawi\n",
     "    factory = StemmerFactory()\n",
-    "    stemmer = factory.create_stemmer()\n",
-    "    # stem\n",
-    "    text = stemmer.stem(text)\n",
+    "    # Membuat objek stemmer\n",
+    "    stemmer = factory.create_stemmer()  \n",
+    "    # Melakukan stemming pada teks dan mengembalikan teks yang telah di-stem\n",
+    "    text = stemmer.stem(text)  \n",
+    "    \n",
     "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +638,7 @@
        "9  cara media massa cari uang main resah bingung ...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,44 +650,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Bahasa alay removal\n",
-    "# Kamus alay\n",
+    "# Mengimpor kamus alay pertama dari repositori 'analisis-sentimen'\n",
     "kamus_alay_1 = pd.read_csv(\n",
     "    \"https://raw.githubusercontent.com/ramaprakoso/analisis-sentimen/master/kamus/kbba.txt\",\n",
-    "    delimiter=\"\\t\",\n",
-    "    header=None,\n",
-    "    names=['slang', 'formal'])\n",
+    "    delimiter=\"\\t\",  # Menggunakan tab sebagai pemisah\n",
+    "    header=None,  # Tidak ada baris header dalam file\n",
+    "    names=['slang', 'formal'])  # Memberi nama kolom dalam DataFrame\n",
+    "\n",
+    "# Mengimpor kamus alay kedua dari repositori 'kamus-alay'\n",
     "kamus_alay_2 = pd.read_csv(\n",
     "    \"https://raw.githubusercontent.com/nasalsabila/kamus-alay/master/colloquial-indonesian-lexicon.csv\",\n",
-    "    usecols=[\"slang\", \"formal\"])\n",
+    "    usecols=[\"slang\", \"formal\"])  # Memilih kolom \"slang\" dan \"formal\" saja\n",
     "\n",
-    "kamus_alay = pd.concat([kamus_alay_1, kamus_alay_2])"
+    "# Menggabungkan kedua kamus alay menjadi satu DataFrame\n",
+    "kamus_alay = pd.concat([kamus_alay_1, kamus_alay_2])  # Menggabungkan kedua DataFrame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dictionary bahasa alay\n",
+    "# Membuat kamus kosong untuk menyimpan pasangan kata slang dan kata formal\n",
     "dict_alay = dict()\n",
+    "\n",
+    "# Iterasi melalui setiap baris dalam DataFrame kamus_alay\n",
     "for index, row in kamus_alay.iterrows():\n",
+    "    # Menambahkan entri kata slang dan kata formal ke dalam dict_alay\n",
     "    dict_alay[row['slang']] = row['formal']\n",
     "\n",
+    "# Fungsi untuk menggantikan kata slang dengan kata formal\n",
     "def normalize_text(text):\n",
+    "    # Tokenisasi teks menjadi list kata\n",
     "    word_tokens = word_tokenize(text)\n",
+    "    # Menggantikan kata slang dengan kata formal menggunakan dict_alay (jika ada)\n",
     "    result = [dict_alay.get(w, w) for w in word_tokens]\n",
+    "    # Menggabungkan kata-kata yang telah dinormalisasi menjadi string\n",
     "    return ' '.join(result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +863,7 @@
        "9  cara media massa cari uang main resah bingung ...  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1055,44 +1064,42 @@
        "9  cara media massa cari uang main resah bingung ...  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Membuat kamus untuk menggantikan kata-kata dalam teks\n",
     "dict_clean = {\n",
     "    \"gin\": \"gini\", \"ya\": \"iya\", \"yaa\": \"iya\", \"gue\": \"aku\", \"saya\": \"aku\", \"moga\": \"semoga\", \"lo\": \"kamu\",\n",
     "    \"gw\": \"aku\", \"djual\": \"dijual\", \"lg\": \"lagi\", \"tp\": \"tapi\", \"jd\": \"jadi\", \"brg\": \"barang\", \"blm\": \"belum\",\n",
     "    \"sm\": \"sama\", \"km\": \"kamu\", \"dg\": \"dengan\", \"jg\": \"juga\", \"dlm\": \"dalam\", \"hrs\": \"harus\", \"bs\": \"bisa\",\n",
     "    \"skrg\": \"sekarang\", \"jln\": \"jalan\", \"pny\": \"punya\", \"brp\": \"berapa\", \"ngg\": \"nggak\", \"ga\": \"tidak\",\n",
     "    \"bkn\": \"bukan\", \"krn\": \"karena\", \"org\": \"orang\", \"thn\": \"tahun\", \"byr\": \"bayar\", \"kmrn\": \"kemarin\",\n",
-    "    \"bg\": \"bang\", \"tks\": \"terima kasih\", \"trm\": \"terima\",\n",
+    "    \"bg\": \"bang\", \"tks\": \"terima kasih\", \"trm\": \"terima\", \"bolhkh\" : \"bolehkah\", \"ktakutan\" : \"ketakutan\", \"kslmtn\" : \"keselamatan\",\n",
+    "    \"untkk\" : \"untuk\",\n",
     "}\n",
     "\n",
+    "# Fungsi untuk menggantikan kata-kata dalam teks berdasarkan kamus dict_clean\n",
     "def replace_word(data):\n",
+    "    # Tokenisasi teks menjadi list kata\n",
     "    word_tokens = word_tokenize(data)\n",
+    "    # Menggantikan kata dengan kata yang sesuai dari dict_clean (jika ada)\n",
     "    result = [dict_clean.get(w, w) for w in word_tokens]\n",
+    "    # Menggabungkan kata-kata yang telah digantikan menjadi string\n",
     "    return ' '.join(result)\n",
     "\n",
-    "# Menambahkan kolom baru\n",
+    "# Menambahkan kolom baru 'text_manual_replaced' yang berisi teks dengan kata-kata digantikan\n",
     "normalized_col_index = df.columns.get_loc(\"text_normalized\")\n",
     "df.insert(normalized_col_index + 1, \"text_manual_replaced\", df[\"text_normalized\"].apply(lambda x: replace_word(x)))\n",
     "\n",
-    "# Menampilkan 10 baris pertama DataFrame\n",
     "df.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1324,7 @@
        "9  [cara, media, massa, cari, uang, main, resah, ...  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1329,46 +1336,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('../Data/2. Clean/clean.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#grouped = df.groupby('video_id')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#for video_id, group_df in grouped:\n",
-    "    #group_df.to_csv(f'../Data/2. Clean/clean_{video_id}.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#num_splits = int(np.ceil(len(df) / 800))\n",
-    "\n",
-    "# Memecah DataFrame menjadi beberapa bagian\n",
-    "#dfs = np.array_split(df, num_splits)\n",
-    "\n",
-    "# Menyimpan setiap bagian ke file CSV yang berbeda\n",
-    "#for i, split_df in enumerate(dfs):\n",
-    "    split_df.to_csv(f'../Data/2. Clean/clean_part_{i+1}.csv', index=False)"
    ]
   }
  ],
@@ -1388,7 +1360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
