--- a/Notebooks/2. Data Preprocessing.ipynb
+++ b/Notebooks/2. Data Preprocessing.ipynb
@@ -300,11 +300,11 @@
     }
    ],
    "source": [
-    "# Rename columns \n",
+    "# Mengubah kolom\n",
     "new_column_names = {'videoId': 'video_id', 'textOriginal': 'comment_text'}\n",
     "df = df.rename(columns=new_column_names)\n",
     "\n",
-    "# Keep only the 'video_id' and 'comment_text' columns\n",
+    "# Mengambil video_id dan comment_text\n",
     "df = df[['video_id', 'comment_text']]\n",
     "\n",
     "df.head()"
@@ -318,7 +318,7 @@
    "source": [
     "# Cleaning\n",
     "def text_cleaning(text):\n",
-    "    # case folding\n",
+    "    # case folding (hrf)\n",
     "    text = text.lower()\n",
     "    # remove mention YouTube\n",
     "    text = re.sub(r'@[A-Za-z0-9_]+\\s[A-Za-z0-9_]+(\\s[A-Za-z0-9_]+)?', '', text)\n",
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -462,6 +462,7 @@
     }
    ],
    "source": [
+    "# Menerapkan fungsi ke kolom baru\n",
     "df[\"text_cleaned\"] = df[\"comment_text\"].apply(text_cleaning)\n",
     "df.head(10)"
    ]
@@ -474,20 +475,20 @@
    "source": [
     "# Filtering (Stopword)\n",
     "def stopword_removal(text):\n",
-    "    # Membuat StopWordRemoverFactory dari pustaka Sastrawi\n",
+    "    # Membuat StopWordRemoverFactory dari pustaka Sastrawi: menginisialisasi pembuatan stopword remover\n",
     "    factory = StopWordRemoverFactory()\n",
-    "    # Membuat objek stopword remover\n",
+    "    # Membuat objek stopword remover: membuat objek yang akan menghapus stopwords\n",
     "    stopword = factory.create_stop_word_remover()  \n",
-    "    # Menghapus kata-kata tidak penting dari teks dan mengembalikan teks yang telah difilter\n",
+    "    # Menghapus kata-kata tidak penting dari teks dan mengembalikan teks yang telah difilter: proses penghapusan stopwords\n",
     "    return stopword.remove(text)\n",
     "\n",
     "# Stemming\n",
     "def stemming(text):\n",
-    "    # Membuat StemmerFactory dari pustaka Sastrawi\n",
+    "    # Membuat StemmerFactory dari pustaka Sastrawi: menginisialisasi pembuatan stemmer\n",
     "    factory = StemmerFactory()\n",
-    "    # Membuat objek stemmer\n",
+    "    # Membuat objek stemmer: membuat objek yang akan melakukan stemming\n",
     "    stemmer = factory.create_stemmer()  \n",
-    "    # Melakukan stemming pada teks dan mengembalikan teks yang telah di-stem\n",
+    "    # Melakukan stemming pada teks dan mengembalikan teks yang telah di-stem: proses stemming\n",
     "    text = stemmer.stem(text)  \n",
     "    \n",
     "    return text"
@@ -644,6 +645,7 @@
     }
    ],
    "source": [
+    "# Menerapkan fungsi ke kolom baru\n",
     "df[\"text_removal\"] = df[\"text_cleaned\"].apply(lambda x: stopword_removal(stemming(x)))\n",
     "df.head(10)"
    ]
@@ -654,21 +656,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bahasa alay removal\n",
-    "# Mengimpor kamus alay pertama dari repositori 'analisis-sentimen'\n",
+    "# Mengimpor kamus alay pertama: membaca file yang berisi kata-kata alay dan bentuk formalnya\n",
     "kamus_alay_1 = pd.read_csv(\n",
     "    \"https://raw.githubusercontent.com/ramaprakoso/analisis-sentimen/master/kamus/kbba.txt\",\n",
-    "    delimiter=\"\\t\",  # Menggunakan tab sebagai pemisah\n",
-    "    header=None,  # Tidak ada baris header dalam file\n",
-    "    names=['slang', 'formal'])  # Memberi nama kolom dalam DataFrame\n",
+    "    delimiter=\"\\t\",\n",
+    "    header=None,\n",
+    "    names=['slang', 'formal'])\n",
     "\n",
-    "# Mengimpor kamus alay kedua dari repositori 'kamus-alay'\n",
+    "# Mengimpor kamus alay kedua: membaca file lain yang berisi kata-kata alay dan bentuk formalnya\n",
     "kamus_alay_2 = pd.read_csv(\n",
     "    \"https://raw.githubusercontent.com/nasalsabila/kamus-alay/master/colloquial-indonesian-lexicon.csv\",\n",
-    "    usecols=[\"slang\", \"formal\"])  # Memilih kolom \"slang\" dan \"formal\" saja\n",
+    "    usecols=[\"slang\", \"formal\"])\n",
     "\n",
-    "# Menggabungkan kedua kamus alay menjadi satu DataFrame\n",
-    "kamus_alay = pd.concat([kamus_alay_1, kamus_alay_2])  # Menggabungkan kedua DataFrame"
+    "# Menggabungkan kedua kamus alay menjadi satu DataFrame: menggabungkan informasi dari kedua sumber\n",
+    "kamus_alay = pd.concat([kamus_alay_1, kamus_alay_2])\n",
+    "\n",
+    "\"\"\"\n",
+    "bagian kode ini berfungsi untuk mempersiapkan kamus alay yang akan digunakan untuk normalisasi teks. \n",
+    "Kamus ini berisi kata-kata alay dan bentuk formalnya, dan diperoleh dari dua sumber berbeda. "
    ]
   },
   {
@@ -692,7 +697,11 @@
     "    # Menggantikan kata slang dengan kata formal menggunakan dict_alay (jika ada)\n",
     "    result = [dict_alay.get(w, w) for w in word_tokens]\n",
     "    # Menggabungkan kata-kata yang telah dinormalisasi menjadi string\n",
-    "    return ' '.join(result)"
+    "    return ' '.join(result)\n",
+    "\n",
+    "\"\"\"\n",
+    "bagian kode ini berfungsi untuk mempersiapkan kamus alay dan fungsi normalisasi teks. \n",
+    "Kamus ini digunakan dalam fungsi normalize_text untuk menggantikan kata slang dengan kata formal."
    ]
   },
   {
@@ -869,6 +878,7 @@
     }
    ],
    "source": [
+    "# Menerapkan fungsi ke kolom baru\n",
     "df[\"text_normalized\"] = df[\"text_removal\"].apply(lambda x: normalize_text(x))\n",
     "df.head(10)"
    ]
@@ -1330,6 +1340,7 @@
     }
    ],
    "source": [
+    "# Menerapkan fungsi ke kolom baru\n",
     "df[\"text_tokenize\"] = df[\"text_manual_replaced\"].apply(lambda x: tokenize_text(x))\n",
     "df.head(10)"
    ]
