--- a/Notebooks/5. Feature Extraction.ipynb
+++ b/Notebooks/5. Feature Extraction.ipynb
@@ -16,7 +16,6 @@
     "\n",
     "# Gensim\n",
     "from gensim.models.word2vec import Word2Vec\n",
-    "from gensim.models.doc2vec import TaggedDocument\n",
     "from gensim.models import KeyedVectors\n",
     "\n",
     "# Progress bar\n",
@@ -195,41 +194,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TaggedDocument"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def labelize_comments_ug(comments, label):\n",
-    "    \"\"\"\n",
-    "    Fungsi ini mengonversi setiap komentar YouTube menjadi objek TaggedDocument \n",
-    "    yang terdiri dari kata-kata dalam komentar dan label/tag yang terkait dengan komentar tersebut.\n",
-    "    \"\"\"\n",
-    "    result = []\n",
-    "    prefix = label\n",
-    "    for i, c in zip(comments.index, comments):\n",
-    "        result.append(TaggedDocument(c, [prefix + '_%s' % i]))\n",
-    "    return result"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mengonversi semua komentar YouTube menjadi objek TaggedDocument\n",
-    "all_comments_w2v = labelize_comments_ug(text_tokenize, 'all')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Word2Vec"
    ]
   },
@@ -254,10 +218,10 @@
     }
    ],
    "source": [
-    "# Jumlah core CPU yang tersedia\n",
+    "# Jumlah core CPU yang tersedia: memeriksa jumlah core CPU untuk paralelisasi\n",
     "cores = multiprocessing.cpu_count()\n",
     "\n",
-    "# Membuat model Word2Vec dengan arsitektur CBOW\n",
+    "# Membuat model Word2Vec dengan arsitektur CBOW: mengatur parameter untuk model Word2Vec\n",
     "model_ug_cbow = Word2Vec(\n",
     "    sg=0,  # Menggunakan CBOW (sg=0)\n",
     "    vector_size=100,  # Ukuran vektor fitur\n",
@@ -270,8 +234,12 @@
     "    hs=1,  # Menggunakan hierarchical softmax\n",
     ")\n",
     "\n",
-    "# Membangun kosakata dari semua komentar yang telah dikonversi menjadi TaggedDocument\n",
-    "model_ug_cbow.build_vocab([x.words for x in tqdm(all_comments_w2v)])"
+    "# Membangun kosakata dari semua komentar yang telah dikonversi menjadi menjadi list token\n",
+    "model_ug_cbow.build_vocab(text_tokenize)\n",
+    "\n",
+    "\"\"\"\n",
+    "bagian kode ini berfungsi untuk mempersiapkan dan mengatur model Word2Vec dengan arsitektur Continuous Bag of Words (CBOW). \n",
+    "Parameter model diatur sesuai kebutuhan. Kemudian, kosakata dibangun dari semua komentar yang telah dikonversi menjadi list token."
    ]
   },
   {
@@ -326,19 +294,26 @@
    ],
    "source": [
     "%%time\n",
-    "# Melatih model Word2Vec dengan arsitektur CBOW sebanyak 10 epoch \n",
+    "# Melatih model Word2Vec dengan arsitektur CBOW sebanyak 30 epoch \n",
     "for epoch in range(30):\n",
-    "    # Mengacak urutan data untuk setiap epoch\n",
-    "    shuffled_data = utils.shuffle([x.words for x in tqdm(all_comments_w2v)])\n",
+    "    # Mengacak urutan data untuk setiap epoch: membuat variasi dalam data latih untuk setiap epoch\n",
+    "    shuffled_data = utils.shuffle(text_tokenize)\n",
     "    \n",
-    "    # Melatih model dengan data yang telah diacak\n",
-    "    model_ug_cbow.train(shuffled_data, total_examples=len(all_comments_w2v), epochs=1)\n",
+    "    # Melatih model dengan data yang telah diacak: proses pembelajaran model\n",
+    "    model_ug_cbow.train(shuffled_data, total_examples=len(text_tokenize), epochs=1)\n",
     "    \n",
-    "    # Mengurangi learning rate sebesar 0.002 setiap epoch\n",
+    "    # Mengurangi learning rate sebesar 0.002 setiap epoch: untuk mengoptimalkan proses pembelajaran\n",
     "    model_ug_cbow.alpha -= 0.002\n",
     "    \n",
     "    # Menyesuaikan learning rate minimum agar sama dengan learning rate saat ini\n",
-    "    model_ug_cbow.min_alpha = model_ug_cbow.alpha\n"
+    "    model_ug_cbow.min_alpha = model_ug_cbow.alpha\n",
+    "\n",
+    "\"\"\"\n",
+    "bagian kode ini berfungsi untuk melatih model Word2Vec dengan arsitektur CBOW. \n",
+    "Pelatihan dilakukan sebanyak 30 epoch, dengan setiap epoch melibatkan pengacakan data dan penurunan learning rate. \n",
+    "Ini membantu model untuk belajar dari variasi dalam data dan mengoptimalkan proses pembelajaran \n",
+    "dengan mengurangi learning rate seiring berjalannya waktu. \n",
+    "Penurunan learning rate ini membantu model untuk konvergen lebih cepat ke solusi optimal."
    ]
   },
   {
@@ -368,8 +343,12 @@
     "    hs=1,  # Menggunakan hierarchical softmax\n",
     ")\n",
     "\n",
-    "# Membangun kosakata dari semua komentar yang telah dikonversi menjadi TaggedDocument\n",
-    "model_ug_sg.build_vocab([x.words for x in tqdm(all_comments_w2v)])\n"
+    "# Membangun kosakata dari semua komentar yang telah dikonversi menjadi  list token\n",
+    "model_ug_sg.build_vocab(text_tokenize)\n",
+    "\n",
+    "\"\"\"\n",
+    "bagian kode ini berfungsi untuk mempersiapkan dan mengatur model Word2Vec dengan arsitektur Skip-Gram. \n",
+    "Parameter model diatur sesuai kebutuhan. Kemudian, kosakata dibangun dari semua komentar yang telah dikonversi menjadi list token.\n"
    ]
   },
   {
@@ -424,19 +403,25 @@
    ],
    "source": [
     "%%time\n",
-    "# Melatih model Word2Vec dengan arsitektur Skip-gram sebanyak 10 epoch\n",
+    "# Melatih model Word2Vec dengan arsitektur Skip-gram sebanyak 30 epoch\n",
     "for epoch in range(30):\n",
     "    # Mengacak urutan data untuk setiap epoch\n",
-    "    shuffled_data = utils.shuffle([x.words for x in tqdm(all_comments_w2v)])\n",
+    "    shuffled_data = utils.shuffle(text_tokenize)\n",
     "    \n",
     "    # Melatih model dengan data yang telah diacak\n",
-    "    model_ug_sg.train(shuffled_data, total_examples=len(all_comments_w2v), epochs=1)\n",
+    "    model_ug_sg.train(shuffled_data, total_examples=len(text_tokenize), epochs=1)\n",
     "    \n",
     "    # Mengurangi learning rate sebesar 0.002 setiap epoch\n",
     "    model_ug_sg.alpha -= 0.002\n",
     "    \n",
     "    # Menyesuaikan learning rate minimum agar sama dengan learning rate saat ini\n",
-    "    model_ug_sg.min_alpha = model_ug_sg.alpha\n"
+    "    model_ug_sg.min_alpha = model_ug_sg.alpha\n",
+    "    \n",
+    "\"\"\"\n",
+    "Pelatihan dilakukan sebanyak 30 epoch, dengan setiap epoch melibatkan pengacakan data dan penurunan learning rate. \n",
+    "Ini membantu model untuk belajar dari variasi dalam data dan mengoptimalkan proses pembelajaran \n",
+    "dengan mengurangi learning rate seiring berjalannya waktu. \n",
+    "Penurunan learning rate ini membantu model untuk konvergen lebih cepat ke solusi optimal.\n"
    ]
   },
   {
@@ -450,6 +435,26 @@
     "\n",
     "# Menyimpan model Word2Vec Skip-gram yang telah dilatih\n",
     "model_ug_sg.save('../Model/w2v_model_ug_sg.word2vec')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CBOW: memprediksi kata target (focus word) berdasarkan kata-kata konteks yang mengelilinginya. Sebagai contoh, diberikan kalimat \"Kucing itu sangat lucu\", dan kata target adalah \"sangat\", maka CBOW akan menggunakan \"Kucing\", \"itu\", \"lucu\" sebagai konteks untuk memprediksi kata \"sangat\".\n",
+    "\n",
+    "Skip-gram: mencoba memprediksi kata-kata konteks (kata-kata sekitar) berdasarkan kata target (kata pusat). Sebagai contoh, diberikan kalimat \"Kucing itu sangat lucu\", dan kata target adalah \"sangat\", maka Skip-gram akan menggunakan \"sangat\" untuk memprediksi kata \"Kucing\", \"itu\", dan \"lucu\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hemat waktu: Menyimpan model menghindari kebutuhan untuk melatihnya lagi, yang bisa memakan waktu lama.\n",
+    "\n",
+    "Reproduktibilitas: Model yang disimpan bisa digunakan kembali untuk tujuan yang sama atau berbeda, dan bisa dibagi dengan orang lain, mendukung penelitian dan pengembangan.\n",
+    "\n",
+    "Pengujian: Model yang disimpan memungkinkan untuk pengujian dan validasi lebih lanjut, memungkinkan perbandingan dan optimalisasi performa."
    ]
   }
  ],
