--- a/Notebooks/6. Split.ipynb
+++ b/Notebooks/6. Split.ipynb
@@ -170,7 +170,7 @@
     "# Import dataset\n",
     "df = pd.read_csv('../Data/4. Labeling/labeling.csv')\n",
     "\n",
-    "# Mengonversi kolom tokenisasi menjadi list\n",
+    "# Mengkonversi kolom tokenisasi menjadi list\n",
     "df['text_tokenize'] = df['text_tokenize'].apply(literal_eval)\n",
     "\n",
     "# Menampilkan total dataset\n",
@@ -234,36 +234,43 @@
     "# Menetapkan nilai SEED untuk memastikan pembagian data konsisten di setiap eksekusi\n",
     "SEED = 42\n",
     "\n",
+    "# Mendefinisikan proporsi pembagian dataset\n",
     "prop_list = [(0.7, \"70_30\"), (0.8, \"80_20\"), (0.9, \"90_10\")]\n",
     "\n",
+    "# Mendefinisikan metode resampling dan objek resampler\n",
+    "resamplers = [(\"original\", None), (\"under\", RandomUnderSampler(random_state=SEED)), (\"over\", RandomOverSampler(random_state=SEED))]\n",
+    "\n",
+    "# Melakukan loop untuk setiap proporsi pembagian dataset\n",
     "for prop, name in prop_list:\n",
-    "    # No resampling (original)\n",
-    "    X_original, y_original = X, y\n",
-    "    \n",
-    "    # Menerapkan RandomUnderSampler\n",
-    "    rus = RandomUnderSampler(random_state=42)\n",
-    "    X_resampled_under, y_resampled_under = rus.fit_resample(X, y)\n",
+    "    # Melakukan loop untuk setiap metode resampling\n",
+    "    for resample_type, resampler in resamplers:\n",
+    "        # Jika resampler bukan None, melakukan resampling, jika tidak, menggunakan data asli\n",
+    "        X_resampled, y_resampled = (X, y) if resampler is None else resampler.fit_resample(X, y)\n",
     "\n",
-    "    # Menerapkan RandomOverSampler\n",
-    "    ros = RandomOverSampler(random_state=42)\n",
-    "    X_resampled_over, y_resampled_over = ros.fit_resample(X, y)\n",
-    "\n",
-    "    for resample_type, X_resampled, y_resampled in [(\"original\", X_original, y_original), (\"under\", X_resampled_under, y_resampled_under), (\"over\", X_resampled_over, y_resampled_over)]:\n",
     "        # Memisahkan dataset menjadi data latih dan gabungan data validasi dan uji dengan proporsi yang ditentukan\n",
-    "        x_train, x_validation_and_test, y_train, y_validation_and_test = train_test_split(X_resampled, y_resampled, test_size=1-prop, random_state=SEED, stratify=y_resampled)\n",
+    "        x_train, x_temp, y_train, y_temp = train_test_split(X_resampled, y_resampled, test_size=1-prop, random_state=SEED, stratify=y_resampled)\n",
     "\n",
     "        # Memisahkan gabungan data validasi dan uji menjadi data validasi dan uji dengan proporsi 50:50\n",
-    "        x_validation, x_test, y_validation, y_test = train_test_split(x_validation_and_test, y_validation_and_test, test_size=.5, random_state=SEED, stratify=y_validation_and_test)\n",
+    "        x_validation, x_test, y_validation, y_test = train_test_split(x_temp, y_temp, test_size=0.5, random_state=SEED, stratify=y_temp)\n",
     "\n",
-    "        # Menggabungkan fitur dan label untuk setiap bagian dataset\n",
-    "        train_data = pd.concat([x_train, y_train], axis=1)\n",
-    "        validation_data = pd.concat([x_validation, y_validation], axis=1)\n",
-    "        test_data = pd.concat([x_test, y_test], axis=1)\n",
+    "        # Mendefinisikan dataset dan labelnya\n",
+    "        datasets = {\"train\": (x_train, y_train), \"validation\": (x_validation, y_validation), \"test\": (x_test, y_test)}\n",
     "\n",
-    "        # Menyimpan setiap bagian dataset ke file CSV\n",
-    "        train_data.to_csv(f'../Data/5. Split/{resample_type}/train_data_{name}_{resample_type}.csv', index=False)\n",
-    "        validation_data.to_csv(f'../Data/5. Split/{resample_type}/validation_data_{name}_{resample_type}.csv', index=False)\n",
-    "        test_data.to_csv(f'../Data/5. Split/{resample_type}/test_data_{name}_{resample_type}.csv', index=False)"
+    "        # Melakukan loop untuk setiap bagian dataset\n",
+    "        for dataset_name, (x, y) in datasets.items():\n",
+    "            # Menggabungkan fitur dan label untuk setiap bagian dataset\n",
+    "            data = pd.concat([x, y], axis=1)\n",
+    "            \n",
+    "            # Menyimpan setiap bagian dataset ke file CSV\n",
+    "            data.to_csv(f'../Data/5. Split/{resample_type}/{dataset_name}_data_{name}_{resample_type}.csv', index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ini sangat berguna untuk memastikan bahwa kita memiliki konsistensi dalam bagaimana kita membagi data kita,\n",
+    "dan memberi kita kemampuan untuk membandingkan kinerja model kita di berbagai skenario pembagian data dan teknik resampling."
    ]
   }
  ],
